fix 'createdAt doesn't fit it's cell on the card'

--- a/src/shared/ui/Card/styles.module.css
+++ b/src/shared/ui/Card/styles.module.css
@@ -1,7 +1,7 @@
 .card {
     transition: all .2s ease-in;
     display: grid;
-    grid-template-columns: 1fr 100px;
+    grid-template-columns: 1fr 120px;
     row-gap: 4px;
     max-width: 100%;
     padding: 10px 20px;
